// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Node Item should add class correctly when marked 1`] = `
<div
  aria-hidden={false}
  aria-selected={false}
  className="sc-ifAKCX kmfGrQ"
  data-marked={true}
  role="listitem"
>
  <span
    className="sc-bdVaJa fIwzXV"
  >
    -rw-r--r--
  </span>
  <span
    className="sc-bxivhb jIOOMm"
  >
    1970/01/01
  </span>
  <pre
    className="sc-htpNat fVieJu"
  >
     10.0B
  </pre>
  <span
    className="sc-bwzfXH eXHuVE"
    data-directory={false}
    data-symlink={false}
  >
    file.ext
  </span>
</div>
`;

exports[`Project Node Item should add class correctly when selected 1`] = `
<div
  aria-hidden={false}
  aria-selected={true}
  className="sc-ifAKCX kmfGrQ"
  data-marked={false}
  role="listitem"
>
  <span
    className="sc-bdVaJa fIwzXV"
  >
    -rw-r--r--
  </span>
  <span
    className="sc-bxivhb jIOOMm"
  >
    1970/01/01
  </span>
  <pre
    className="sc-htpNat fVieJu"
  >
     10.0B
  </pre>
  <span
    className="sc-bwzfXH eXHuVE"
    data-directory={false}
    data-symlink={false}
  >
    file.ext
  </span>
</div>
`;

exports[`Project Node Item should add class correctly when selected and marked 1`] = `
<div
  aria-hidden={false}
  aria-selected={true}
  className="sc-ifAKCX kmfGrQ"
  data-marked={true}
  role="listitem"
>
  <span
    className="sc-bdVaJa fIwzXV"
  >
    -rw-r--r--
  </span>
  <span
    className="sc-bxivhb jIOOMm"
  >
    1970/01/01
  </span>
  <pre
    className="sc-htpNat fVieJu"
  >
     10.0B
  </pre>
  <span
    className="sc-bwzfXH eXHuVE"
    data-directory={false}
    data-symlink={false}
  >
    file.ext
  </span>
</div>
`;

exports[`Project Node Item should print correctly 1`] = `
<div
  aria-hidden={false}
  aria-selected={false}
  className="sc-ifAKCX kmfGrQ"
  data-marked={false}
  role="listitem"
>
  <span
    className="sc-bdVaJa fIwzXV"
  >
    -rw-r--r--
  </span>
  <span
    className="sc-bxivhb jIOOMm"
  >
    1970/01/01
  </span>
  <pre
    className="sc-htpNat fVieJu"
  >
     10.0B
  </pre>
  <span
    className="sc-bwzfXH eXHuVE"
    data-directory={false}
    data-symlink={false}
  >
    file.ext
  </span>
</div>
`;
